--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+index.html
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -7,14 +8,12 @@
     <title>Você decide o futuro da IA</title>
 </head>
 <body>
-    <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
-        <div class="caixa-perguntas"></div>
-        <div class="caixa-alternativas"></div>
-        <div class="caixa-resultado"></div>
-            <p class="texto-resultado"></p>
-        </div>
-    </div>
-    <script src="script.js"></script>
+   <div class="caixa-principal">
+      <h1>Você decide o futuro da IA</h1>
+      <div class="caixa-perguntas">
+    </div> <div class="caixa-alternativas"></div>
+    <div class="caixa-resultado"></div>
+    <p class="texto-resultado"></p>
+  </div>
 </body>
-</html>
+<script src="script.js"></script>
